--- a/src/main/resources/static/js/book/book.html
+++ b/src/main/resources/static/js/book/book.html
@@ -31,7 +31,7 @@
 		<div class="md-list-item-text" layout="row">
 			<span>{{book.id}}</span>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;<span>{{book.name}}</span>
 		</div>
-		<md-button ng-click="bookCtrl.deleteBook(bookCtrl.book)" aria-label="Delete"
+		<md-button ng-click="bookCtrl.deleteBook(book)" aria-label="Delete"
 			title="Delete" class="md-fab md-warn"> <md-icon>delete_forever</md-icon>
 		</md-button> <md-button ng-click="bookCtrl.editBook(book)" aria-label="Edit" title="Edit"
 			class="md-fab md-accent"> <md-icon>edit</md-icon> </md-button> </md-list-item> </md-list> </md-content>
