--- a/src/main/resources/static/js/book/book.html
+++ b/src/main/resources/static/js/book/book.html
@@ -5,8 +5,7 @@
 			ng-submit="bookCtrl.saveBook(bookCtrl.book)">
 			<input type="hidden" ng-model="bookCtrl.book.id" name="id" />
 			<md-input-container> <label>Name</label> <input
-				ng-model="bookCtrl.book.name" required maxlength="50"
-				name="name" />
+				ng-model="bookCtrl.book.name" required maxlength="50" name="name" />
 			<div ng-messages="bookForm.name.$error" ng-show="bookCtrl.showHints">
 				<div ng-message="required">This is required.</div>
 				<div ng-message="md-maxlength">The description must be less
@@ -26,15 +25,17 @@
 	<div flex="70">
 		<md-content> <md-list flex> <md-subheader
 			class="md-no-sticky">Books / <span><b>Total
-				= </b></span> <span align="center">{{length}}</span></md-subheader> <md-list-item
-			class="md-3-line" ng-repeat="book in bookCtrl.books" ng-click="null">
+				= </b></span> <span align="center">{{length}}</span></md-subheader> <md-divider></md-divider>
+		<md-list-item class="md-3-line" ng-repeat="book in bookCtrl.books"
+			ng-click="null">
 		<div class="md-list-item-text" layout="row">
 			<span>{{book.id}}</span>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;<span>{{book.name}}</span>
 		</div>
 		<md-button ng-click="bookCtrl.deleteBook(book)" aria-label="Delete"
 			title="Delete" class="md-fab md-warn"> <md-icon>delete_forever</md-icon>
-		</md-button> <md-button ng-click="bookCtrl.editBook(book)" aria-label="Edit" title="Edit"
-			class="md-fab md-accent"> <md-icon>edit</md-icon> </md-button> </md-list-item> </md-list> </md-content>
+		</md-button> <md-button ng-click="bookCtrl.editBook(book)" aria-label="Edit"
+			title="Edit" class="md-fab md-accent"> <md-icon>edit</md-icon>
+		</md-button> <md-divider></md-divider> </md-list-item> </md-list> </md-content>
 	</div>
 	<div flex="10"></div>
 </div>
